Updated elgohr/Publish-Docker-Github-Action to a supported version (v5)

--- a/.github/workflows/cd-docker-demo.yml
+++ b/.github/workflows/cd-docker-demo.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: ${{ env.REGISTRY }}/${{ env.ACR_REPO }}
         username: ${{ secrets.ESQUIO_DOCKER_USERNAME }}
